--- a/anova1.qmd
+++ b/anova1.qmd
@@ -97,6 +97,47 @@ ggplot(summary_data, aes(x = Explanatory, y = mean, group = Explanatory)) +
 
 As we can see, even with 100 sample, we still have some chances of having groups that are different! When we do pairwise comparisons, we are compounding the error and the possibility of coming to an incorrect conclusion. Thus, when comparing multiple groups, we use the variances to see if groups come from the same distribution rather than the mean.
 
+### A faster way to check normality
+
+Checking the normality can be a pain. Thankfully, there is an easier way we can check. Take, for example, the `penguins` dataset built into *R*.
+
+```{r}
+head(penguins)
+```
+
+Let's say we want to check if the bill length is normally distributed between all species.
+
+First, we have to remove `NA` values for this example only to make sure things work right.
+
+```{r}
+# FOR THIS EXAMPLE ONLY
+# remove NA values
+penguins2 <- penguins |> 
+  na.omit()
+```
+
+Next, we can test for normality by species in bill length.
+
+```{r}
+penguins2 |> 
+  group_by(species) |> 
+  dplyr::summarize(p.value = shapiro.test(bill_len)$p.value)
+```
+
+As we can see above, two species are normally distributed, but Gentoo Penguin is not.
+
+**NOTE** that I ran `dplyr::summarize` and *not* `summarize` - there is an error in the libraries used in this class where summarize is sometimes overwritten, so specifying the `dplyr` library (part of `tidyverse`) ensures that we always get the right function.
+
+We can test a transformation like so:
+
+```{r}
+penguins2 |> 
+  group_by(species) |> 
+  dplyr::summarize(p.value = shapiro.test(log1p(bill_len))$p.value)
+```
+
+As we can see, a `log1p` transformation is sufficient.
+
 ## ANOVA: By hand
 
 We are predominately going to be using the default function `aov` to perform ANOVAs in this course. However, you can expand the following workthrough if you would like to see step-by-step instructions on calculating a one-way ANOVA by hand.
