--- a/assignments/12_one_way_ANOVA_HW_topost.Rmd
+++ b/assignments/12_one_way_ANOVA_HW_topost.Rmd
@@ -15,7 +15,7 @@ library(UNKstats)
 
 ### **Question 1:**
 
-Researchers want to test a new drug when given at different dosages. They are also including a placebo. They are measuring the score on a psychological examination, and are hoping to find the most effective dose to reduce score. Run the proper tests to determine if each group is unique and what effects they have.
+Researchers want to test a new drug when given at different dosages. They are also including a placebo. They are measuring the score on a psychological examination, and are hoping to find the most effective dose to reduce the score. Run the proper tests to determine if each group is unique and what effects they have.
 
 ```{r}
 drug <- tibble(
