--- a/descriptive_stats.qmd
+++ b/descriptive_stats.qmd
@@ -25,9 +25,7 @@ As with every week, we will need to load our relevant packages first. This week,
 ```{r, message=FALSE, warning=FALSE, results='hide'}
 # enables data management tools
 library(tidyverse)
-# DescTools can also be used
-# see section on MODE
-library(DescTools)
+library(UNKstats)
 ```
 
 ***REMEMBER***: An *R* package must be installed before it can be used with the command `install.packages` or via the *RStudio* interface.
@@ -400,35 +398,13 @@ This allows you to find how many arguments match your condition quickly, and eve
 
 </details>
 
-However, the library *DescTools* has many missing basic statistical functions, including **Mode()**. Use this method in your code to reduce clutter and make the code run faster.
-
-<details>
-
-<summary>Click to see DescTools method</summary>
+However, the library *UNKstats* has many missing basic statistical functions, including `find_mode()`. Use this method in your code to reduce clutter and make the code run faster.
 
 ```{r}
-#Load the package
-#Must be loaded each time it you reboot R
-library(DescTools)  
-
-#Run the function  
-Mode(fraps)  
-###Note the capitalization of mode###
+find_mode(fraps)
 ```
 
-The output of this function is three lines. In our case it reads:
-
-```         
-[1] 2
-attr(,"freq") 
-[1] 3
-```
-
-The **first number** is the mode; in our case, two is our mode. The second line is the computer telling us that our second number is the frequency of our first number. In our case, that means our mode, which is two, appears three times. The number 2 occurs thrice.
-
-If there are two or more modes, these numbers will also appear in the first line of the output.
-
-</details>
+The output of this function is two lines. The first line returns the value(s) for the mode, while the second line tells us the frequency with which this value occurs.
 
 <hr>
 
@@ -568,10 +544,10 @@ $$
 
 <summary>Click to see how to calculate standard error</summary>
 
-There is not a built in function for standard error in *R*, but we can use *DescTools*.
+There is not a built in function for standard error in *R*, but we can use `UNKstats`.
 
 ```{r}
-MeanSE(frap_order) #This is from DescTools!
+se(frap_order)
 ```
 
 </details>
@@ -592,33 +568,19 @@ $$
 CV = \frac{\sigma}{\mu}*100
 $$
 
-<details>
-
-<summary>Click to see how to calculate coefficient of variation</summary>
-
 If we were to calculate this by hand, it would be done with this function:
 
-```{r}
-cv <- function(x){
-  sigma <- sd(x)
-  mu <- mean(x)
-  val <- sigma/mu*100
-  return(val)
-}
+```{r, eval = F}
+val <- sigma/mu*100
+```
 
+We can also use the function in `UNKstats`.
+
+```{r}
 cv(frap_order) |> 
   round(2)
 #Remember that we will need to round values.
 ```
-
-However, we can also complete this with a *DescTools* function.
-
-```{r}
-(CoefVar(frap_order)*100) |> 
-  round(2)
-```
-
-</details>
 
 <hr>
 
@@ -684,6 +646,9 @@ We have no outliers for this particular dataset.
 This can also be done with *DescTools*.
 
 ```{r}
+# don't forget to install, if needed!
+library(DescTools)
+
 Outlier(frap_order)
 ```
 
