--- a/answer_keys/11_two-sample.Rmd
+++ b/answer_keys/11_two-sample.Rmd
@@ -72,12 +72,12 @@ virginica <- iris |>
 
 # DATA CANNOT BE NORMALIZED
 
-wilcox.test(versicolor$Petal.Width, virginica$Petal.Width, alternative = "two.sided")
+wilcox.test(virginica$Petal.Width, versicolor$Petal.Width, alternative = "two.sided")
 ```
 
 The test is significant ($p < 0.0001$).
 
-The test statistic is 49.
+The test statistic is 49 *or* 2451.
 
 # Question 5: Bacteria counts
 
@@ -132,8 +132,6 @@ mean(flint_mdeq$lead>15)
 No, there is only 8.7% (0.09) of households with bad lead in this sample.
 
 ```{r, echo = F, results = F}
-flint_mdeq$lead |> log1p() |> shapiro.test()
-
 wilcox.test(flint_mdeq$lead, mu = 15, alternative = "l")
 ```
 
